# chatgptfy

./: README.md  input.txt  prompt.csv  pyproject.toml
chatgptfy/: __main__.py  cli.py  models.py  schema.py
