[tool.poetry]
name = "chatgptfy"
version = "0.1.0"
description = ""
authors = ["anan <anan@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
chatgptfy = "chatgptfy.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
